Fix alignment and size of CB chart inside the modal

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1825,7 +1825,8 @@
   #healthBurndownChart,
   #healthRiskMatrixChart,
   #risksMatrixChart,
-  #documentsMapChart {
+  #documentsMapChart,
+  #costBenefitScroll {
     text-align: center;
     max-width: 1000px;
     margin: auto;
